# gspread-delimited-export

./: .envrc  README.md  pyproject.toml
src/gspread_delimited_export/: cli.py
src/gspread_export/: cli.py
